--- a/_includes/ziming.bib
+++ b/_includes/ziming.bib
@@ -52,5 +52,6 @@
 @inproceedings{yang2023gl,
   title={GL-Cache: Group-level learning for efficient and high-performance caching},
   author={Yang, Juncheng and Mao, Ziming and Yue, Yao and Vinayak, Rashmi},
-  booktitle={FAST 2023}
+  booktitle={FAST 2023},
+  year={2023}
 }
